subnet.tf
resource "aws_subnet" "public-subnet1" {
  vpc_id     = aws_vpc.docker1_vpc.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1a"
  map_public_ip_on_launch = true
  tags = {
    Name = "Subnet for docker1"
  }
}
